# ds-trainer

./: .gitignore  README.md  migrate_to_sqlite.py  pyproject.toml  reset_database.py
ds_trainer/: __main__.py  cli.py  evaluators.py  models.py  questions.db  registry.py  runner.py
ds_trainer/data/: generators.py
ds_trainer/domains/: algorithms.py  case_studies.py  ml.py  probability.py  python_pandas.py  sql.py  statistics.py
tests/: conftest.py  test_evaluators.py  test_models.py  test_registry.py  test_runner.py
tests/test_domains/: test_algorithms.py  test_case_studies.py  test_ml.py  test_python_pandas.py  test_sql.py  test_statistics.py
web/: main.py
web/static/: app.js  index.html  styles.css
